ARM: make mach/io.h include optional
Add a kconfig option NEED_MACH_IO_H to conditionally include mach/io.h.

Basing this on CONFIG_PCI and CONFIG_ISA doesn't quite work. Most ISA
platforms don't need mach/io.h, but ebsa110 does. Most PCI platforms need
mach/io.h for now, but ks8695 doesn't which means i/o accesses are broken.

Signed-off-by: Rob Herring <rob.herring@calxeda.com>
Cc: Russell King <linux@arm.linux.org.uk>
Acked-by: H Hartley Sweeten <hsweeten@visionengravers.com>
Acked-by: Nicolas Pitre <nico@linaro.org>

--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -227,6 +227,13 @@ config ARM_PATCH_PHYS_VIRT_16BIT
 	  this feature (eg, building a kernel for a single machine) and
 	  you need to shrink the kernel to the minimal size.
 
+config NEED_MACH_IO_H
+        bool
+        help
+          Select this when mach/io.h is required to provide special
+          definitions for this platform.  The need for mach/io.h should
+          be avoided when possible.
+
 config NEED_MACH_MEMORY_H
 	bool
 	help
@@ -311,6 +318,7 @@ config ARCH_U8500
 	select NOMADIK_GPIO
 	select ARCH_HAS_PASR
 	select NEED_MACH_MEMORY_H
+	select NEED_MACH_IO_H
 	help
 	  Support for ST-Ericsson's Ux500 architecture
 
