--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -183,6 +183,9 @@ config ZONE_DMA
 config NEED_DMA_MAP_STATE
        def_bool y
 
+config ARCH_HAS_DMA_SET_COHERENT_MASK
+	bool
+
 config GENERIC_ISA_DMA
 	bool
 
