--- a/drivers/staging/Kconfig
+++ b/drivers/staging/Kconfig
@@ -182,6 +182,7 @@ source "drivers/staging/camera_flash/Kconfig"
 
 source "drivers/staging/pasr/Kconfig"
 
+source "drivers/staging/vnswap/Kconfig"
 
 if CW1200
 config STE_WLAN 
@@ -190,4 +191,5 @@ config STE_WLAN
 	
 source "drivers/staging/etf_drivers/Kconfig"
 endif
+
 endif # STAGING
