power: earlysuspend: speedup late_resume
https://github.com/pedestre/Kernel-Apolo-JB-4.1.2/commit/5f291ac282e1a4d935f05b7be5ba4be29c806cb

Conflicts:
	kernel/power/Kconfig
	kernel/power/earlysuspend.c

--- a/kernel/power/Kconfig
+++ b/kernel/power/Kconfig
@@ -380,3 +380,10 @@ config WQ_POWER_EFFICIENT_DEFAULT
 	  is enabled by default.
 
 	  If in doubt, say N.
+
+config SPEEDUP_KEYRESUME
+	bool "Speed up late resume"
+	depends on SUSPEND
+	default y
+	---help---
+	  Speed up system resume
