--- a/arch/arm/configs/codina_defconfig
+++ b/arch/arm/configs/codina_defconfig
@@ -478,10 +478,8 @@ CONFIG_CMDLINE="androidboot.hardware=samsungcodina log_buf_len=64K"
 CONFIG_CMDLINE_EXTEND=y
 # CONFIG_CMDLINE_FORCE is not set
 CONFIG_CMDLINE_CUSTOM_PARAMETERS=y
-CONFIG_CMDLINE_OVERRIDE_HWMEM=y
-CONFIG_CMDLINE_OVERRIDE_HWMEM_STRING=""
-CONFIG_CMDLINE_OVERRIDE_RAMCONSOLE=y
-CONFIG_CMDLINE_OVERRIDE_RAMCONSOLE_STRING=""
+# CONFIG_CMDLINE_OVERRIDE_HWMEM is not set
+# CONFIG_CMDLINE_OVERRIDE_RAMCONSOLE is not set
 # CONFIG_XIP_KERNEL is not set
 CONFIG_KEXEC=y
 # CONFIG_CRASH_SWRESET is not set
