setup: fix warnings

--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -1183,12 +1183,13 @@ endchoice
 
 config CMDLINE_CUSTOM_PARAMETERS
 	bool "CMDLINE_CUSTOM_PARAMETERS"
+	depends on ARCH_U8500
 	depends on CMDLINE_EXTEND
-	default y if CMDLINE_OVERRIDE_HWMEM || CMDLINE_OVERRIDE_RAMCONSOLE
+	depends on CMDLINE_OVERRIDE_HWMEM || ( CMDLINE_OVERRIDE_HWMEM && CMDLINE_OVERRIDE_RAMCONSOLE )
+	default n
 
 config CMDLINE_OVERRIDE_HWMEM
 	bool "CMDLINE_OVERRIDE_HWMEM"
-	depends on ARCH_U8500
 
 config CMDLINE_OVERRIDE_HWMEM_STRING
 	depends on CMDLINE_OVERRIDE_HWMEM
@@ -1196,6 +1197,7 @@ config CMDLINE_OVERRIDE_HWMEM_STRING
 	default ""
 
 config CMDLINE_OVERRIDE_RAMCONSOLE
+	depends on CMDLINE_OVERRIDE_HWMEM
 	bool "CMDLINE_OVERRIDE_RAMCONSOLE"
 
 config CMDLINE_OVERRIDE_RAMCONSOLE_STRING
