defconfig: dump configs

--- a/arch/arm/configs/codina_defconfig
+++ b/arch/arm/configs/codina_defconfig
@@ -452,7 +452,9 @@ CONFIG_VIRT_TO_BUS=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_CLEANCACHE is not set
 CONFIG_DYNAMIC_PAGE_WRITEBACK=y
-# CONFIG_FRONTSWAP is not set
+CONFIG_ZSWAP=y
+CONFIG_VNSWAP=m
+CONFIG_FRONTSWAP=y
 # CONFIG_ZBUD is not set
 CONFIG_ZPOOL=y
 CONFIG_ZSMALLOC=y
