defconfig: add and enable ZBUD

--- a/arch/arm/configs/codina_defconfig
+++ b/arch/arm/configs/codina_defconfig
@@ -455,7 +455,7 @@ CONFIG_DYNAMIC_PAGE_WRITEBACK=y
 CONFIG_ZSWAP=y
 CONFIG_VNSWAP=m
 CONFIG_FRONTSWAP=y
-# CONFIG_ZBUD is not set
+CONFIG_ZBUD=y
 CONFIG_ZPOOL=y
 CONFIG_ZSMALLOC=y
 # CONFIG_PGTABLE_MAPPING is not set
