--- a/arch/arm/configs/codina_defconfig
+++ b/arch/arm/configs/codina_defconfig
@@ -453,7 +453,7 @@ CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_CLEANCACHE is not set
 CONFIG_DYNAMIC_PAGE_WRITEBACK=y
 CONFIG_ZSWAP=y
-CONFIG_VNSWAP=m
+CONFIG_VNSWAP=y
 CONFIG_FRONTSWAP=y
 CONFIG_ZBUD=y
 CONFIG_ZPOOL=y
@@ -2415,7 +2415,7 @@ CONFIG_INOTIFY_USER=y
 # CONFIG_QUOTA is not set
 # CONFIG_QUOTACTL is not set
 # CONFIG_AUTOFS4_FS is not set
-CONFIG_FUSE_FS=y
+CONFIG_FUSE_FS=m
 # CONFIG_CUSE is not set
 CONFIG_GENERIC_ACL=y
 
