defconfig: dump configs

--- a/arch/arm/configs/codina_nodebug_defconfig
+++ b/arch/arm/configs/codina_nodebug_defconfig
@@ -446,7 +446,7 @@ CONFIG_DYNAMIC_PAGE_WRITEBACK=y
 CONFIG_ZSWAP=y
 CONFIG_VNSWAP=m
 CONFIG_FRONTSWAP=y
-# CONFIG_ZBUD is not set
+CONFIG_ZBUD=y
 CONFIG_ZPOOL=y
 CONFIG_ZSMALLOC=y
 # CONFIG_PGTABLE_MAPPING is not set
@@ -948,6 +948,7 @@ CONFIG_SYS_SOC=y
 # CONFIG_MTD is not set
 # CONFIG_PARPORT is not set
 CONFIG_BLK_DEV=y
+CONFIG_VNSWAP=m
 CONFIG_ZRAM=m
 CONFIG_ZRAM_LZ4_COMPRESS=y
 # CONFIG_ZRAM_DEBUG is not set
@@ -2446,6 +2447,7 @@ CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_ADFS_FS is not set
 # CONFIG_AFFS_FS is not set
 # CONFIG_ECRYPT_FS is not set
+CONFIG_SDCARD_FS=m
 # CONFIG_HFS_FS is not set
 # CONFIG_HFSPLUS_FS is not set
 # CONFIG_BEFS_FS is not set
