--- a/arch/arm/configs/codina_defconfig
+++ b/arch/arm/configs/codina_defconfig
@@ -453,7 +453,7 @@ CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_CLEANCACHE is not set
 CONFIG_DYNAMIC_PAGE_WRITEBACK=y
 CONFIG_ZSWAP=y
-CONFIG_VNSWAP=y
+CONFIG_VNSWAP=m
 CONFIG_FRONTSWAP=y
 CONFIG_ZBUD=y
 CONFIG_ZPOOL=y
@@ -2465,7 +2465,7 @@ CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_ADFS_FS is not set
 # CONFIG_AFFS_FS is not set
 # CONFIG_ECRYPT_FS is not set
-CONFIG_SDCARD_FS=y
+CONFIG_SDCARD_FS=m
 # CONFIG_HFS_FS is not set
 # CONFIG_HFSPLUS_FS is not set
 # CONFIG_BEFS_FS is not set
