--- a/arch/arm/configs/codina_nodebug_defconfig
+++ b/arch/arm/configs/codina_nodebug_defconfig
@@ -1858,7 +1858,7 @@ CONFIG_SND_SOC_UX500_AB8500=y
 # CONFIG_SND_SOC_UX500_AB8500_MID_WIDGET is not set
 CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
-CONFIG_SND_SOC_AB8500=y
+CONFIG_SND_SOC_AB8500=m
 # CONFIG_SOUND_PRIME is not set
 CONFIG_HID_SUPPORT=y
 CONFIG_HID=y
@@ -2397,7 +2397,7 @@ CONFIG_INOTIFY_USER=y
 # CONFIG_QUOTA is not set
 # CONFIG_QUOTACTL is not set
 # CONFIG_AUTOFS4_FS is not set
-CONFIG_FUSE_FS=y
+CONFIG_FUSE_FS=m
 # CONFIG_CUSE is not set
 CONFIG_GENERIC_ACL=y
 
