--- a/arch/arm/configs/codina_defconfig
+++ b/arch/arm/configs/codina_defconfig
@@ -63,9 +63,7 @@ CONFIG_HAVE_GENERIC_HARDIRQS=y
 # IRQ subsystem
 #
 CONFIG_GENERIC_HARDIRQS=y
-CONFIG_HAVE_SPARSE_IRQ=y
 CONFIG_GENERIC_IRQ_SHOW=y
-# CONFIG_SPARSE_IRQ is not set
 
 #
 # RCU Subsystem
@@ -452,10 +450,9 @@ CONFIG_VIRT_TO_BUS=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_CLEANCACHE is not set
 CONFIG_DYNAMIC_PAGE_WRITEBACK=y
-CONFIG_ZSWAP=y
-CONFIG_VNSWAP=m
 CONFIG_FRONTSWAP=y
 CONFIG_ZBUD=y
+CONFIG_ZSWAP=y
 CONFIG_ZPOOL=y
 CONFIG_ZSMALLOC=y
 # CONFIG_PGTABLE_MAPPING is not set
@@ -479,9 +476,7 @@ CONFIG_CMDLINE="androidboot.hardware=samsungcodina log_buf_len=64K"
 # CONFIG_CMDLINE_FROM_BOOTLOADER is not set
 CONFIG_CMDLINE_EXTEND=y
 # CONFIG_CMDLINE_FORCE is not set
-CONFIG_CMDLINE_CUSTOM_PARAMETERS=y
 # CONFIG_CMDLINE_OVERRIDE_HWMEM is not set
-# CONFIG_CMDLINE_OVERRIDE_RAMCONSOLE is not set
 # CONFIG_XIP_KERNEL is not set
 CONFIG_KEXEC=y
 # CONFIG_CRASH_SWRESET is not set
@@ -1872,7 +1867,7 @@ CONFIG_SND_SOC_UX500_AB8500=y
 # CONFIG_SND_SOC_UX500_AB8500_MID_WIDGET is not set
 CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
-CONFIG_SND_SOC_AB8500=m
+CONFIG_SND_SOC_AB8500=y
 # CONFIG_SOUND_PRIME is not set
 CONFIG_HID_SUPPORT=y
 CONFIG_HID=y
@@ -2274,6 +2269,8 @@ CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_BINDER_IPC_32BIT=y
 CONFIG_ANDROID_LOGGER=m
+CONFIG_ANDROID_RAM_CONSOLE=y
+CONFIG_ANDROID_RAM_CONSOLE_ENABLE_VERBOSE=y
 CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION=y
 CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION_DATA_SIZE=128
 CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION_ECC_SIZE=16
@@ -2290,6 +2287,7 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER_DO_NOT_KILL_PROCESS=y
 # CONFIG_LINE6_USB is not set
 # CONFIG_VT6656 is not set
 # CONFIG_IIO is not set
+# CONFIG_ZCACHE is not set
 # CONFIG_FB_SM7XX is not set
 CONFIG_MACH_NO_WESTBRIDGE=y
 # CONFIG_ATH6K_LEGACY is not set
@@ -2314,6 +2312,7 @@ CONFIG_U8500_CM=y
 # CONFIG_U8500_FLASH is not set
 CONFIG_ARCH_HAS_PASR=y
 # CONFIG_PASR is not set
+CONFIG_VNSWAP=m
 CONFIG_CLKDEV_LOOKUP=y
 CONFIG_TEE_SUPPORT=y
 CONFIG_CLKSRC_MMIO=y
@@ -2385,6 +2384,7 @@ CONFIG_SVNET_WHITELIST=y
 #
 # File systems
 #
+CONFIG_DCACHE_WORD_ACCESS=y
 # CONFIG_EXT2_FS is not set
 # CONFIG_EXT3_FS is not set
 CONFIG_EXT4_FS=y
@@ -2408,6 +2408,7 @@ CONFIG_F2FS_FS_XATTR=y
 CONFIG_F2FS_FS_POSIX_ACL=y
 CONFIG_F2FS_FS_SECURITY=y
 CONFIG_F2FS_CHECK_FS=y
+# CONFIG_F2FS_FS_ENCRYPTION is not set
 CONFIG_FS_POSIX_ACL=y
 CONFIG_FILE_LOCKING=y
 CONFIG_FSNOTIFY=y
@@ -2468,6 +2469,8 @@ CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_AFFS_FS is not set
 # CONFIG_ECRYPT_FS is not set
 CONFIG_SDCARD_FS=m
+CONFIG_SDCARD_FS_CI_SEARCH=m
+# CONFIG_SDCARD_FS_XATTR is not set
 # CONFIG_HFS_FS is not set
 # CONFIG_HFSPLUS_FS is not set
 # CONFIG_BEFS_FS is not set
@@ -2534,6 +2537,7 @@ CONFIG_NLS_ISO8859_1=y
 # CONFIG_NLS_KOI8_U is not set
 CONFIG_NLS_UTF8=y
 CONFIG_DYNAMIC_FSYNC=y
+CONFIG_ASYNC_FSYNC=y
 
 #
 # Kernel hacking
@@ -2779,6 +2783,9 @@ CONFIG_LZ4HC_COMPRESS=y
 CONFIG_LZ4_DECOMPRESS=y
 # CONFIG_XZ_DEC is not set
 # CONFIG_XZ_DEC_BCJ is not set
+CONFIG_REED_SOLOMON=y
+CONFIG_REED_SOLOMON_ENC8=y
+CONFIG_REED_SOLOMON_DEC8=y
 CONFIG_TEXTSEARCH=y
 CONFIG_TEXTSEARCH_KMP=y
 CONFIG_TEXTSEARCH_BM=y
