--- a/arch/arm/configs/codina_defconfig
+++ b/arch/arm/configs/codina_defconfig
@@ -996,7 +996,7 @@ CONFIG_AB8500_PWM=y
 # CONFIG_SENSORS_AK8975 is not set
 # CONFIG_DS1682 is not set
 # CONFIG_TI_DAC7512 is not set
-CONFIG_UID_CPUTIME=m
+CONFIG_UID_CPUTIME=n
 CONFIG_UID_STAT=y
 # CONFIG_STE_TRACE_MODEM is not set
 CONFIG_DBX500_MLOADER=y
@@ -1009,7 +1009,7 @@ CONFIG_COMPDEV=y
 # CONFIG_COMPDEV_DEBUG is not set
 CONFIG_CLONEDEV=y
 # CONFIG_CLONEDEV_DEBUG is not set
-CONFIG_NFC_PN544=m
+CONFIG_NFC_PN544=y
 CONFIG_SAMSUNG_JACK=y
 # CONFIG_SAMSUNG_JACK_SW_WATERPROOF is not set
 # CONFIG_U8500_SIM_DETECT is not set
@@ -1101,7 +1101,7 @@ CONFIG_NETDEVICES=y
 # CONFIG_BONDING is not set
 # CONFIG_MACVLAN is not set
 # CONFIG_EQUALIZER is not set
-CONFIG_TUN=m
+CONFIG_TUN=y
 # CONFIG_VETH is not set
 CONFIG_MII=m
 # CONFIG_PHYLIB is not set
@@ -2418,7 +2418,7 @@ CONFIG_INOTIFY_USER=y
 # CONFIG_QUOTA is not set
 # CONFIG_QUOTACTL is not set
 # CONFIG_AUTOFS4_FS is not set
-CONFIG_FUSE_FS=m
+CONFIG_FUSE_FS=y
 # CONFIG_CUSE is not set
 CONFIG_GENERIC_ACL=y
 
@@ -2468,7 +2468,7 @@ CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_ADFS_FS is not set
 # CONFIG_AFFS_FS is not set
 # CONFIG_ECRYPT_FS is not set
-CONFIG_SDCARD_FS=m
+CONFIG_SDCARD_FS=n
 CONFIG_SDCARD_FS_CI_SEARCH=m
 # CONFIG_SDCARD_FS_XATTR is not set
 # CONFIG_HFS_FS is not set
