--- a/drivers/net/wireless/bcmdhd/Kconfig
+++ b/drivers/net/wireless/bcmdhd/Kconfig
@@ -50,14 +50,14 @@ config BROADCOM_WIFI
 config BCMDHD_FW_PATH
 	depends on WLAN
 	string "Firmware path"
-	default "/system/etc/firmware/fw_bcmdhd.bin"
+	default "/system/etc/wifi/bcmdhd_sta.bin"
 	---help---
 	  Path to the firmware file.
 
 config BCMDHD_NVRAM_PATH
 	depends on WLAN
 	string "NVRAM path"
-	default "/system/etc/wifi/bcmdhd.cal"
+	default "/system/etc/wifi/nvram_net.txt"
 	---help---
 	  Path to the calibration file.
 
