--- a/drivers/gpu/ion/Kconfig
+++ b/drivers/gpu/ion/Kconfig
@@ -12,7 +12,7 @@ config ION_TEGRA
 
 config ION_EXYNOS
 	tristate "Ion for Exynos"
-	depends on ARCH_EXYNOS && ION
+	depends on ION
 	select CMA
 	help
 	  Choose this option if you wish to use ion on a Samsung Exynos.
