--- a/mm/Makefile
+++ b/mm/Makefile
@@ -58,3 +58,5 @@ obj-$(CONFIG_CLEANCACHE) += cleancache.o
 obj-$(CONFIG_ZPOOL)	+= zpool.o
 obj-$(CONFIG_ZBUD)	+= zbud.o
 obj-$(CONFIG_ZSMALLOC)	+= zsmalloc.o
+obj-$(CONFIG_CMA) += cma.o
+obj-$(CONFIG_CMA_BEST_FIT) += cma-best-fit.o
