defconfig: compile TUN and NFC built-in

--- a/arch/arm/configs/codina_defconfig
+++ b/arch/arm/configs/codina_defconfig
@@ -1009,7 +1009,7 @@ CONFIG_COMPDEV=y
 # CONFIG_COMPDEV_DEBUG is not set
 CONFIG_CLONEDEV=y
 # CONFIG_CLONEDEV_DEBUG is not set
-CONFIG_NFC_PN544=m
+CONFIG_NFC_PN544=y
 CONFIG_SAMSUNG_JACK=y
 # CONFIG_SAMSUNG_JACK_SW_WATERPROOF is not set
 # CONFIG_U8500_SIM_DETECT is not set
@@ -1101,7 +1101,7 @@ CONFIG_NETDEVICES=y
 # CONFIG_BONDING is not set
 # CONFIG_MACVLAN is not set
 # CONFIG_EQUALIZER is not set
-CONFIG_TUN=m
+CONFIG_TUN=y
 # CONFIG_VETH is not set
 CONFIG_MII=m
 # CONFIG_PHYLIB is not set
