defconfig: disable VNSWAP

--- a/arch/arm/configs/codina_defconfig
+++ b/arch/arm/configs/codina_defconfig
@@ -996,7 +996,7 @@ CONFIG_AB8500_PWM=y
 # CONFIG_SENSORS_AK8975 is not set
 # CONFIG_DS1682 is not set
 # CONFIG_TI_DAC7512 is not set
-CONFIG_UID_CPUTIME=m
+CONFIG_UID_CPUTIME=y
 CONFIG_UID_STAT=y
 # CONFIG_STE_TRACE_MODEM is not set
 CONFIG_DBX500_MLOADER=y
@@ -2312,7 +2312,6 @@ CONFIG_U8500_CM=y
 # CONFIG_U8500_FLASH is not set
 CONFIG_ARCH_HAS_PASR=y
 # CONFIG_PASR is not set
-CONFIG_VNSWAP=m
 CONFIG_CLKDEV_LOOKUP=y
 CONFIG_TEE_SUPPORT=y
 CONFIG_CLKSRC_MMIO=y
