--- a/arch/arm/configs/codina_defconfig
+++ b/arch/arm/configs/codina_defconfig
@@ -206,7 +206,7 @@ CONFIG_EFI_PARTITION=y
 #
 # IO Schedulers
 #
-CONFIG_IOSCHED_NOOP=m
+CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=m
 CONFIG_IOSCHED_CFQ=m
 CONFIG_IOSCHED_BFQ=m
@@ -2336,8 +2336,8 @@ CONFIG_U8500_SHRM_MODEM_SILENT_RESET=y
 CONFIG_SAMSUNG_MODULES=m
 CONFIG_J4FS=m
 CONFIG_SAMSUNG_PARAM=m
-CONFIG_STARTUP_REASON=m
-CONFIG_AB8500_STARTUP_REASON=m
+CONFIG_STARTUP_REASON=y
+CONFIG_AB8500_STARTUP_REASON=y
 CONFIG_NEW_SENSORS=y
 CONFIG_SENSORS_ALPS=y
 # CONFIG_SENSORS_ALPS_CORE is not set
