--- a/arch/arm/configs/codina_defconfig
+++ b/arch/arm/configs/codina_defconfig
@@ -311,6 +311,7 @@ CONFIG_DB8500_MLOADER=y
 CONFIG_UX500_DEBUG_NO_LAUTERBACH=y
 CONFIG_UX500_L2X0_PREFETCH_CTRL=y
 CONFIG_UX500_DB_DUMP=y
+CONFIG_RTC_HCTOHC=y
 # CONFIG_UX500_DEBUG_LAST_IO is not set
 CONFIG_UX500_HW_OBSERVER=y
 # CONFIG_U8500_CUSTOM_RF is not set
@@ -2168,7 +2169,7 @@ CONFIG_RTC_INTF_DEV=y
 # CONFIG_RTC_INTF_DEV_UIE_EMUL is not set
 CONFIG_RTC_INTF_ALARM=y
 CONFIG_RTC_INTF_ALARM_DEV=y
-CONFIG_RTC_ALARM_DEV_NAME=""
+CONFIG_RTC_ALARM_DEV_NAME="pl031"
 # CONFIG_RTC_DRV_TEST is not set
 
 #
@@ -2228,8 +2229,8 @@ CONFIG_RTC_DRV_AB8500=y
 #
 # on-CPU RTC drivers
 #
-# CONFIG_RTC_DRV_PL030 is not set
-# CONFIG_RTC_DRV_PL031 is not set
+# CONFIG_RTC_DRV_PL030 is not set 
+CONFIG_RTC_DRV_PL031=y
 # CONFIG_MACH_SEC_GOLDEN_CHN is not set
 # CONFIG_MACH_JANICE_CHN is not set
 # CONFIG_MACH_GAVINI_CHN is not set
