--- a/arch/arm/configs/codina_nodebug_defconfig
+++ b/arch/arm/configs/codina_nodebug_defconfig
@@ -26,7 +26,6 @@ CONFIG_GENERIC_CALIBRATE_DELAY=y
 CONFIG_NEED_DMA_MAP_STATE=y
 CONFIG_VECTORS_BASE=0xffff0000
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
-CONFIG_GENERIC_BUG=y
 # CONFIG_ARCH_RANDOM is not set
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_HAVE_IRQ_WORK=y
@@ -116,11 +115,10 @@ CONFIG_PANIC_TIMEOUT=5
 CONFIG_EXPERT=y
 CONFIG_UID16=y
 # CONFIG_SYSCTL_SYSCALL is not set
-CONFIG_KALLSYMS=y
-# CONFIG_KALLSYMS_ALL is not set
+# CONFIG_KALLSYMS is not set
 CONFIG_HOTPLUG=y
 CONFIG_PRINTK=y
-CONFIG_BUG=y
+# CONFIG_BUG is not set
 # CONFIG_ELF_CORE is not set
 CONFIG_BASE_FULL=y
 CONFIG_FUTEX=y
@@ -140,7 +138,6 @@ CONFIG_PERF_USE_VMALLOC=y
 #
 CONFIG_PERF_EVENTS=y
 # CONFIG_PERF_COUNTERS is not set
-# CONFIG_DEBUG_PERF_USE_VMALLOC is not set
 CONFIG_VM_EVENT_COUNTERS=y
 # CONFIG_SLUB_DEBUG is not set
 CONFIG_COMPAT_BRK=y
@@ -164,7 +161,6 @@ CONFIG_HAVE_HW_BREAKPOINT=y
 #
 # GCOV-based kernel profiling
 #
-# CONFIG_GCOV_KERNEL is not set
 CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
@@ -304,10 +300,8 @@ CONFIG_DBX500_SCHED_CLOCK_PRCMU=y
 # CONFIG_DBX500_MTU_SCHED_CLOCK is not set
 CONFIG_UX500_DEBUG_UART=0
 CONFIG_UX500_GPIO_KEYS=y
-# CONFIG_DBX500_PRCMU_DEBUG is not set
 CONFIG_TEE_UX500=y
 CONFIG_DB8500_MLOADER=y
-# CONFIG_UX500_DEBUG_HWREG is not set
 CONFIG_UX500_DEBUG_NO_LAUTERBACH=y
 CONFIG_UX500_L2X0_PREFETCH_CTRL=y
 CONFIG_UX500_DB_DUMP=y
@@ -329,12 +323,9 @@ CONFIG_MACH_CODINA_EURO=y
 CONFIG_DBX500_PRCMU_QOS_POWER=y
 CONFIG_DBX500_CONTEXT=y
 # CONFIG_UX500_PM_PERFORMANCE is not set
-CONFIG_UX500_CONSOLE_UART_GPIO_PIN=29
 CONFIG_UX500_SUSPEND=y
 CONFIG_UX500_SUSPEND_STANDBY=y
 CONFIG_UX500_SUSPEND_MEM=y
-CONFIG_UX500_SUSPEND_DBG=y
-CONFIG_UX500_SUSPEND_DBG_WAKE_ON_UART=y
 # CONFIG_UX500_USECASE_GOVERNOR is not set
 
 #
@@ -476,7 +467,11 @@ CONFIG_CMDLINE="androidboot.hardware=samsungcodina log_buf_len=64K"
 # CONFIG_CMDLINE_FROM_BOOTLOADER is not set
 CONFIG_CMDLINE_EXTEND=y
 # CONFIG_CMDLINE_FORCE is not set
-# CONFIG_CMDLINE_OVERRIDE_HWMEM is not set
+CONFIG_CMDLINE_CUSTOM_PARAMETERS=y
+CONFIG_CMDLINE_OVERRIDE_HWMEM=y
+CONFIG_CMDLINE_OVERRIDE_HWMEM_STRING=" hwmem=72M@256M mem=55M@328M"
+CONFIG_CMDLINE_OVERRIDE_RAMCONSOLE=y
+CONFIG_CMDLINE_OVERRIDE_RAMCONSOLE_STRING="mem=383M@384M"
 # CONFIG_XIP_KERNEL is not set
 CONFIG_KEXEC=y
 # CONFIG_CRASH_SWRESET is not set
@@ -526,7 +521,6 @@ CONFIG_CPU_IDLE_GOV_MENU=y
 CONFIG_DBX500_CPUIDLE=y
 CONFIG_DBX500_CPUIDLE_DEEPEST_STATE=4
 # CONFIG_DBX500_CPUIDLE_APDEEPIDLE is not set
-# CONFIG_DBX500_CPUIDLE_DEBUG is not set
 
 #
 # Floating point emulation
@@ -910,7 +904,6 @@ CONFIG_CFG80211_DEFAULT_PS=y
 # CONFIG_CFG80211_REG_DEBUG is not set
 CONFIG_WEXT_PROC=y
 # CONFIG_CFG80211_DEVELOPER_WARNINGS is not set
-# CONFIG_CFG80211_DEBUGFS is not set
 # CONFIG_CFG80211_INTERNAL_REGDB is not set
 CONFIG_WIRELESS_EXT_SYSFS=y
 # CONFIG_LIB80211 is not set
@@ -943,8 +936,6 @@ CONFIG_PREVENT_FIRMWARE_BUILD=y
 CONFIG_FW_LOADER=y
 CONFIG_FIRMWARE_IN_KERNEL=y
 CONFIG_EXTRA_FIRMWARE=""
-# CONFIG_DEBUG_DRIVER is not set
-# CONFIG_DEBUG_DEVRES is not set
 # CONFIG_SYS_HYPERVISOR is not set
 CONFIG_SYS_SOC=y
 # CONFIG_GENERIC_CPU_DEVICES is not set
@@ -1009,7 +1000,7 @@ CONFIG_COMPDEV=y
 # CONFIG_COMPDEV_DEBUG is not set
 CONFIG_CLONEDEV=y
 # CONFIG_CLONEDEV_DEBUG is not set
-CONFIG_NFC_PN544=y
+CONFIG_NFC_PN544=m
 CONFIG_SAMSUNG_JACK=y
 # CONFIG_SAMSUNG_JACK_SW_WATERPROOF is not set
 # CONFIG_U8500_SIM_DETECT is not set
@@ -1101,7 +1092,7 @@ CONFIG_NETDEVICES=y
 # CONFIG_BONDING is not set
 # CONFIG_MACVLAN is not set
 # CONFIG_EQUALIZER is not set
-CONFIG_TUN=y
+CONFIG_TUN=m
 # CONFIG_VETH is not set
 CONFIG_MII=m
 # CONFIG_PHYLIB is not set
@@ -1392,7 +1383,6 @@ CONFIG_I2C_NOMADIK=y
 # CONFIG_I2C_DEBUG_ALGO is not set
 # CONFIG_I2C_DEBUG_BUS is not set
 CONFIG_SPI=y
-# CONFIG_SPI_DEBUG is not set
 CONFIG_SPI_MASTER=y
 
 #
@@ -1433,7 +1423,6 @@ CONFIG_SPI_GPIO=y
 #
 CONFIG_ARCH_REQUIRE_GPIOLIB=y
 CONFIG_GPIOLIB=y
-# CONFIG_DEBUG_GPIO is not set
 CONFIG_GPIO_SYSFS=y
 
 #
@@ -1598,7 +1587,6 @@ CONFIG_WATCHDOG=y
 # CONFIG_MPCORE_WATCHDOG is not set
 # CONFIG_MAX63XX_WATCHDOG is not set
 CONFIG_UX500_WATCHDOG=y
-# CONFIG_UX500_WATCHDOG_DEBUG is not set
 CONFIG_UX500_WATCHDOG_KERNEL_KICKER=y
 
 #
@@ -1662,7 +1650,6 @@ CONFIG_ABX500_CORE=y
 CONFIG_AB8500_CORE=y
 CONFIG_AB8500_I2C_CORE=y
 # CONFIG_AB8500_DENC is not set
-# CONFIG_AB8500_DEBUG is not set
 CONFIG_AB8500_GPADC=y
 # CONFIG_AB3550_CORE is not set
 CONFIG_DBX500_PRCMU=y
@@ -2045,9 +2032,7 @@ CONFIG_USB_STORAGE=y
 # CONFIG_USB_ISIGHTFW is not set
 # CONFIG_USB_YUREX is not set
 CONFIG_USB_GADGET=y
-# CONFIG_USB_GADGET_DEBUG is not set
 # CONFIG_USB_GADGET_DEBUG_FILES is not set
-# CONFIG_USB_GADGET_DEBUG_FS is not set
 CONFIG_USB_GADGET_VBUS_DRAW=500
 CONFIG_USB_GADGET_SELECTED=y
 # CONFIG_USB_GADGET_FUSB300 is not set
@@ -2269,14 +2254,7 @@ CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_BINDER_IPC_32BIT=y
 CONFIG_ANDROID_LOGGER=m
-CONFIG_ANDROID_RAM_CONSOLE=y
-CONFIG_ANDROID_RAM_CONSOLE_ENABLE_VERBOSE=y
-CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION=y
-CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION_DATA_SIZE=128
-CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION_ECC_SIZE=16
-CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION_SYMBOL_SIZE=8
-CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION_POLYNOMIAL=0x11d
-# CONFIG_ANDROID_RAM_CONSOLE_EARLY_INIT is not set
+# CONFIG_ANDROID_RAM_CONSOLE is not set
 CONFIG_ANDROID_TIMED_OUTPUT=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
@@ -2394,7 +2372,6 @@ CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_EXT4_FS_SECURITY=y
 # CONFIG_EXT4_DEBUG is not set
 CONFIG_JBD2=y
-# CONFIG_JBD2_DEBUG is not set
 CONFIG_FS_MBCACHE=y
 # CONFIG_REISERFS_FS is not set
 # CONFIG_JFS_FS is not set
@@ -2403,7 +2380,6 @@ CONFIG_FS_MBCACHE=y
 # CONFIG_BTRFS_FS is not set
 # CONFIG_NILFS2_FS is not set
 CONFIG_F2FS_FS=m
-CONFIG_F2FS_STAT_FS=y
 CONFIG_F2FS_FS_XATTR=y
 CONFIG_F2FS_FS_POSIX_ACL=y
 CONFIG_F2FS_FS_SECURITY=y
@@ -2543,7 +2519,7 @@ CONFIG_ASYNC_FSYNC=y
 # Kernel hacking
 #
 CONFIG_PRINTK_TIME=y
-CONFIG_DEBUG_PRINTK=y
+# CONFIG_DEBUG_PRINTK is not set
 CONFIG_DEFAULT_MESSAGE_LOGLEVEL=4
 # CONFIG_ENABLE_WARN_DEPRECATED is not set
 CONFIG_ENABLE_MUST_CHECK=y
@@ -2551,60 +2527,19 @@ CONFIG_FRAME_WARN=1024
 # CONFIG_MAGIC_SYSRQ is not set
 # CONFIG_STRIP_ASM_SYMS is not set
 # CONFIG_UNUSED_SYMBOLS is not set
-CONFIG_DEBUG_FS=y
+# CONFIG_DEBUG_FS is not set
 # CONFIG_HEADERS_CHECK is not set
 # CONFIG_DEBUG_SECTION_MISMATCH is not set
-CONFIG_DEBUG_KERNEL=y
-# CONFIG_DEBUG_SHIRQ is not set
-# CONFIG_LOCKUP_DETECTOR is not set
+# CONFIG_DEBUG_KERNEL is not set
 # CONFIG_HARDLOCKUP_DETECTOR is not set
-# CONFIG_DETECT_HUNG_TASK is not set
-# CONFIG_SCHED_DEBUG is not set
-# CONFIG_SCHEDSTATS is not set
-# CONFIG_TIMER_STATS is not set
-# CONFIG_DEBUG_OBJECTS is not set
 # CONFIG_SLUB_STATS is not set
-# CONFIG_DEBUG_KMEMLEAK is not set
-# CONFIG_DEBUG_PREEMPT is not set
-# CONFIG_DEBUG_RT_MUTEXES is not set
-# CONFIG_RT_MUTEX_TESTER is not set
-# CONFIG_DEBUG_SPINLOCK is not set
-# CONFIG_DEBUG_MUTEXES is not set
-# CONFIG_DEBUG_LOCK_ALLOC is not set
-# CONFIG_PROVE_LOCKING is not set
 # CONFIG_SPARSE_RCU_POINTER is not set
-# CONFIG_LOCK_STAT is not set
-# CONFIG_DEBUG_SPINLOCK_SLEEP is not set
-# CONFIG_DEBUG_LOCKING_API_SELFTESTS is not set
 CONFIG_STACKTRACE=y
-# CONFIG_DEBUG_STACK_USAGE is not set
-# CONFIG_DEBUG_KOBJECT is not set
-# CONFIG_DEBUG_HIGHMEM is not set
-CONFIG_DEBUG_BUGVERBOSE=y
-# CONFIG_DEBUG_INFO is not set
-# CONFIG_DEBUG_VM is not set
-# CONFIG_DEBUG_WRITECOUNT is not set
 # CONFIG_DEBUG_MEMORY_INIT is not set
-# CONFIG_DEBUG_LIST is not set
-# CONFIG_TEST_LIST_SORT is not set
-# CONFIG_DEBUG_SG is not set
-# CONFIG_DEBUG_NOTIFIERS is not set
-# CONFIG_DEBUG_CREDENTIALS is not set
 CONFIG_FRAME_POINTER=y
-# CONFIG_BOOT_PRINTK_DELAY is not set
-# CONFIG_RCU_TORTURE_TEST is not set
 CONFIG_RCU_CPU_STALL_TIMEOUT=60
 CONFIG_RCU_CPU_STALL_VERBOSE=y
-# CONFIG_RCU_CPU_STALL_INFO is not set
-# CONFIG_BACKTRACE_SELF_TEST is not set
-# CONFIG_DEBUG_BLOCK_EXT_DEVT is not set
-# CONFIG_DEBUG_FORCE_WEAK_PER_CPU is not set
-# CONFIG_DEBUG_PER_CPU_MAPS is not set
-# CONFIG_LKDTM is not set
-# CONFIG_CPU_NOTIFIER_ERROR_INJECT is not set
-# CONFIG_FAULT_INJECTION is not set
 CONFIG_SYSCTL_SYSCALL_CHECK=y
-# CONFIG_DEBUG_PAGEALLOC is not set
 CONFIG_HAVE_FUNCTION_TRACER=y
 CONFIG_HAVE_FUNCTION_GRAPH_TRACER=y
 CONFIG_HAVE_DYNAMIC_FTRACE=y
@@ -2612,18 +2547,15 @@ CONFIG_HAVE_FTRACE_MCOUNT_RECORD=y
 CONFIG_HAVE_C_RECORDMCOUNT=y
 CONFIG_TRACING_SUPPORT=y
 # CONFIG_FTRACE is not set
-# CONFIG_DYNAMIC_DEBUG is not set
 # CONFIG_DMA_API_DEBUG is not set
 # CONFIG_ATOMIC64_SELFTEST is not set
 # CONFIG_PANIC_ON_DATA_CORRUPTION is not set
 # CONFIG_SAMPLES is not set
 CONFIG_HAVE_ARCH_KGDB=y
-# CONFIG_KGDB is not set
 # CONFIG_TEST_KSTRTOX is not set
 # CONFIG_STRICT_DEVMEM is not set
 # CONFIG_ARM_UNWIND is not set
 # CONFIG_DEBUG_USER is not set
-# CONFIG_DEBUG_LL is not set
 # CONFIG_OC_ETM is not set
 
 #
@@ -2783,9 +2715,6 @@ CONFIG_LZ4HC_COMPRESS=y
 CONFIG_LZ4_DECOMPRESS=y
 # CONFIG_XZ_DEC is not set
 # CONFIG_XZ_DEC_BCJ is not set
-CONFIG_REED_SOLOMON=y
-CONFIG_REED_SOLOMON_ENC8=y
-CONFIG_REED_SOLOMON_DEC8=y
 CONFIG_TEXTSEARCH=y
 CONFIG_TEXTSEARCH_KMP=y
 CONFIG_TEXTSEARCH_BM=y
