--- a/arch/arm/configs/codina_defconfig
+++ b/arch/arm/configs/codina_defconfig
@@ -997,7 +997,7 @@ CONFIG_AB8500_PWM=y
 # CONFIG_SENSORS_AK8975 is not set
 # CONFIG_DS1682 is not set
 # CONFIG_TI_DAC7512 is not set
-CONFIG_UID_CPUTIME=m
+CONFIG_UID_CPUTIME=y
 CONFIG_UID_STAT=y
 # CONFIG_STE_TRACE_MODEM is not set
 CONFIG_DBX500_MLOADER=y
