mali: switch to CONFIG_UMP from HWMEM

--- a/arch/arm/configs/codina_defconfig
+++ b/arch/arm/configs/codina_defconfig
@@ -1742,6 +1742,7 @@ CONFIG_ION_EXYNOS_CONTIGHEAP_SIZE=71680
 # CONFIG_ION_EXYNOS_CONTIGHEAP_DEBUG is not set
 CONFIG_GPU_MALI=y
 CONFIG_MALI400=y
+CONFIG_UMP=y
 # CONFIG_MALI400_DEBUG is not set
 CONFIG_MALI400_GPU_UTILIZATION=y
 # CONFIG_VGASTATE is not set
