Cross-device kernel: initial janice support
Signed-off-by: Shilin Victor <chrono.monochrome@gmail.com>

--- a/arch/arm/mach-ux500/Kconfig
+++ b/arch/arm/mach-ux500/Kconfig
@@ -113,28 +113,26 @@ config KEYLAYOUT_LAYOUT2
 	  enter keys and special character "."(dot)
 
 endchoice
-if MACH_SAMSUNG_U8500
-choice
-	prompt "Samsung U8500 HW"
+
 config MACH_GAVINI
 	bool "Gavini"
 	help
 	  Supports Gavini boards
-config MACH_JANICE
+config BOARD_JANICE
 	bool "Janice"
 	help
 	  Supports Janice boards
-config MACH_JANICE_KOR
+config BOARD_JANICE_KOR
 	bool "Janice_kor"
 	help
 	  Supports Janice_kor boards
-# config MACH_JANICE_CHN
+# config BOARD_JANICE_CHN
 #	bool "Janice_chn"
 #	help
 #	  Supports Chinese features of Janice_chn boards. This features
 #	  will be used in Power off alarm and OVP UI concept for Chinese
 #	  models.
-config MACH_CODINA
+config BOARD_CODINA
 	bool "Codina"
 	help
 	  Supports Codina boards
@@ -154,7 +152,7 @@ config MACH_SEC_HENDRIX
 	bool "Hendrix"
 	help
 	  Supports Hendrix boards
-endchoice
+
 menu "Samsung Product Features"
 config SAMSUNG_PRODUCT_SHIP
         bool "set up for product for shipping"
@@ -343,7 +341,7 @@ config TARGET_LOCALE_CHN
 	help
           This enables 'Wlan CHN' feature.
 
-config MACH_CODINA_EURO
+config BOARD_CODINA_EURO
 	bool "Codina Euro device"
 	default n
 	help
@@ -351,5 +349,3 @@ config MACH_CODINA_EURO
 source "arch/arm/mach-ux500/Kconfig-arch"
 source "arch/arm/mach-ux500/pm/Kconfig"
 source "arch/arm/mach-ux500/test/Kconfig"
-
-endif
