--- a/arch/arm/configs/codina_defconfig
+++ b/arch/arm/configs/codina_defconfig
@@ -253,7 +253,7 @@ CONFIG_FREEZER=y
 #
 CONFIG_MMU=y
 CONFIG_ARCH_MMAP_RND_BITS_MIN=8
-CONFIG_ARCH_MMAP_RND_BITS_MAX=15
+CONFIG_ARCH_MMAP_RND_BITS_MAX=16
 CONFIG_ARCH_MMAP_RND_BITS=8
 CONFIG_ARCH_U8500=y
 # CONFIG_ARCH_NOMADIK is not set
@@ -310,8 +310,8 @@ CONFIG_DB8500_MLOADER=y
 CONFIG_UX500_DEBUG_NO_LAUTERBACH=y
 CONFIG_UX500_L2X0_PREFETCH_CTRL=y
 CONFIG_UX500_DB_DUMP=y
-# CONFIG_UX500_DEBUG_LAST_IO is not set
 CONFIG_RTC_HCTOHC=y
+# CONFIG_UX500_DEBUG_LAST_IO is not set
 CONFIG_UX500_HW_OBSERVER=y
 # CONFIG_U8500_CUSTOM_RF is not set
 CONFIG_BT_BCM4330=y
@@ -411,10 +411,10 @@ CONFIG_SCHED_MC=y
 # CONFIG_SCHED_SMT is not set
 CONFIG_HAVE_ARM_SCU=y
 CONFIG_HAVE_ARM_TWD=y
-# CONFIG_VMSPLIT_3G is not set
-CONFIG_VMSPLIT_2G=y
+CONFIG_VMSPLIT_3G=y
+# CONFIG_VMSPLIT_2G is not set
 # CONFIG_VMSPLIT_1G is not set
-CONFIG_PAGE_OFFSET=0x80000000
+CONFIG_PAGE_OFFSET=0xC0000000
 CONFIG_NR_CPUS=2
 CONFIG_HOTPLUG_CPU=y
 CONFIG_LOCAL_TIMERS=y
@@ -429,7 +429,8 @@ CONFIG_AEABI=y
 # CONFIG_ARCH_SPARSEMEM_DEFAULT is not set
 # CONFIG_ARCH_SELECT_MEMORY_MODEL is not set
 CONFIG_HAVE_ARCH_PFN_VALID=y
-# CONFIG_HIGHMEM is not set
+CONFIG_HIGHMEM=y
+# CONFIG_HIGHPTE is not set
 CONFIG_HW_PERF_EVENTS=y
 CONFIG_SELECT_MEMORY_MODEL=y
 CONFIG_FLATMEM_MANUAL=y
@@ -444,6 +445,7 @@ CONFIG_COMPACTION_RETRY=y
 CONFIG_MIGRATION=y
 # CONFIG_PHYS_ADDR_T_64BIT is not set
 CONFIG_ZONE_DMA_FLAG=0
+CONFIG_BOUNCE=y
 CONFIG_VIRT_TO_BUS=y
 # CONFIG_KSM is not set
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
@@ -569,12 +571,12 @@ CONFIG_PM=y
 # CONFIG_PM_DEBUG is not set
 # CONFIG_APM_EMULATION is not set
 CONFIG_PM_CLK=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_SUSPEND_TIME=y
 # CONFIG_DVFS_LIMIT is not set
 CONFIG_PM_SYNC_CTRL=y
 CONFIG_SPEEDUP_KEYRESUME=y
 CONFIG_CPU_PM=y
-CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_NET=y
 
@@ -2109,7 +2111,6 @@ CONFIG_MMC_BLOCK_BOUNCE=y
 #
 CONFIG_MMC_ARMMMCI=y
 # CONFIG_MMC_SDHCI is not set
-# CONFIG_MMC_SPI is not set
 # CONFIG_MMC_DW is not set
 # CONFIG_MMC_VUB300 is not set
 # CONFIG_MMC_USHC is not set
@@ -2230,7 +2231,7 @@ CONFIG_RTC_DRV_AB8500=y
 #
 # on-CPU RTC drivers
 #
-# CONFIG_RTC_DRV_PL030 is not set
+# CONFIG_RTC_DRV_PL030 is not set 
 CONFIG_RTC_DRV_PL031=y
 # CONFIG_MACH_SEC_GOLDEN_CHN is not set
 # CONFIG_BOARD_JANICE_CHN is not set
@@ -2605,6 +2606,7 @@ CONFIG_DEBUG_KERNEL=y
 CONFIG_STACKTRACE=y
 # CONFIG_DEBUG_STACK_USAGE is not set
 # CONFIG_DEBUG_KOBJECT is not set
+# CONFIG_DEBUG_HIGHMEM is not set
 CONFIG_DEBUG_BUGVERBOSE=y
 # CONFIG_DEBUG_INFO is not set
 # CONFIG_DEBUG_VM is not set
@@ -2655,7 +2657,6 @@ CONFIG_HAVE_ARCH_KGDB=y
 # Security options
 #
 CONFIG_KEYS=y
-# CONFIG_ENCRYPTED_KEYS is not set
 # CONFIG_KEYS_DEBUG_PROC_KEYS is not set
 CONFIG_SECURITY=y
 # CONFIG_SECURITYFS is not set
