shrm: use prebuilt blob
(test.c is compiled in ARM mode, everything else in THUMB2)

--- a/drivers/modem/shrm/Makefile
+++ b/drivers/modem/shrm/Makefile
@@ -2,6 +2,8 @@
 # Makefile for SHRM drivers
 #
 
+obj-y := empty.o
+
 ifdef CONFIG_PHONET
 #u8500_shrm-objs := 	modem_shrm_driver.o shrm_fifo.o shrm_protocol.o test.o
 
@@ -10,14 +12,14 @@ AFLAGS_NOWARN   :=$(call as-option,-Wa$(comma)-mno-warn-deprecated,-Wa$(comma)-W
 CFLAGS_THUMB2   :=-mthumb $(AFLAGS_AUTOIT) $(AFLAGS_NOWARN)
 AFLAGS_THUMB2   :=$(CFLAGS_THUMB2) -Wa$(comma)-mthumb
 
-AFLAGS_modem_shrm_driver.o += $(AFLAGS_THUMB2)
-CFLAGS_modem_shrm_driver.o += $(CFLAGS_THUMB2)
+#AFLAGS_modem_shrm_driver.o += $(AFLAGS_THUMB2)
+#CFLAGS_modem_shrm_driver.o += $(CFLAGS_THUMB2)
 
-AFLAGS_shrm_fifo.o += $(AFLAGS_THUMB2)
-CFLAGS_shrm_fifo.o += $(CFLAGS_THUMB2)
+#AFLAGS_shrm_fifo.o += $(AFLAGS_THUMB2)
+#CFLAGS_shrm_fifo.o += $(CFLAGS_THUMB2)
 
-AFLAGS_shrm_protocol.o += $(AFLAGS_THUMB2)
-CFLAGS_shrm_protocol.o += $(CFLAGS_THUMB2)
+#AFLAGS_shrm_protocol.o += $(AFLAGS_THUMB2)
+#CFLAGS_shrm_protocol.o += $(CFLAGS_THUMB2)
 
 else
 u8500_shrm-objs := 	shrm_driver.o shrm_fifo.o shrm_protocol.o
@@ -28,5 +30,5 @@ endif
 u8500_shrm.o: $(src)/u8500_shrm.o
 	cp $(src)/u8500_shrm.o $(obj)/u8500_shrm.o
 
-obj-$(CONFIG_U8500_SHRM)	+= u8500_shrm.o
 
+obj-$(CONFIG_U8500_SHRM)	+= u8500_shrm.o
