Compile everything in Thumb2 mode

--- a/arch/arm/configs/codina_defconfig
+++ b/arch/arm/configs/codina_defconfig
@@ -424,7 +424,7 @@ CONFIG_LOCAL_TIMERS=y
 CONFIG_PREEMPT=y
 CONFIG_PREEMPT_COUNT=y
 CONFIG_HZ=400
-# CONFIG_THUMB2_KERNEL is not set
+CONFIG_THUMB2_KERNEL=y
 CONFIG_AEABI=y
 # CONFIG_OABI_COMPAT is not set
 # CONFIG_ARCH_SPARSEMEM_DEFAULT is not set
@@ -480,7 +480,7 @@ CONFIG_CMDLINE="androidboot.hardware=samsungcodina androidboot.selinux=permissiv
 CONFIG_CMDLINE_FORCE=y
 # CONFIG_CMDLINE_OVERRIDE_HWMEM is not set
 # CONFIG_XIP_KERNEL is not set
-CONFIG_KEXEC=y
+CONFIG_KEXEC=n
 # CONFIG_CRASH_SWRESET is not set
 CONFIG_ATAGS_PROC=y
 CONFIG_KEXEC_HARDBOOT=y
@@ -2690,7 +2690,7 @@ CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_KGDB is not set
 # CONFIG_TEST_KSTRTOX is not set
 # CONFIG_STRICT_DEVMEM is not set
-# CONFIG_ARM_UNWIND is not set
+CONFIG_ARM_UNWIND=y
 CONFIG_OLD_MCOUNT=y
 # CONFIG_DEBUG_USER is not set
 # CONFIG_DEBUG_LL is not set
